--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="link">
                 <button class="animate__animated animate__bounceInLeft">
-          <a href="https://vbvdo.amouronliine.com/?utm_source=da57dc555e50572d&&ban=fb&j5=1&j6=1&s1=50573&s2=2098461&click_id=LANCARJAYA2"btn btn-danger">REGISTER 18+</a>
+          <a href="https://www.liveroomcam.com/?utm_source=da57dc555e50572d&ban=fb&s1=232783&s2=2110337&click_id=POTATTO_ASLI"btn btn-danger">CONTINUE 18+</a>
           </button>
             </div>
             <div class="sc-gKclnd lgGPK">
@@ -114,5 +114,6 @@
         </script>
     </header>
 </body>
+
 
 </html>
